[package]
name = "libuwebsockets-sys"
version = "0.0.9"
authors = ["Genrikh Fetishchev <genrikhfetischev@gmail.com>"]
description = "Bindings to the uWebSockets CAPI"
homepage = "https://github.com/GenrikhFetischev/libuwebsockets-sys"
edition = "2021"
links = "uwebsockets"
license = "MIT"
keywords = ["http", "websocket", "server", "uwebsockets"]

[features]
uws_vendored = []

[dependencies]

[build-dependencies]
bindgen = "0.68.1"
